fixing z-index issue

--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -114,7 +114,7 @@
     background-color: black;
     background-color: white;
     position: relative;
-    z-index: 1000;
+    z-index: 1;
     padding: 15px;
     border: 1px solid;
     border-radius: 10px;
